lib/tests/fixtures/compiler/parser/return_in_node.baseline
Error: return_in_node.pp:3:9: return statement cannot be used inside a node statement.
  return
  ^~~~~~
