lib/tests/fixtures/compiler/parser/return_in_node.pp
node foo {
    if true {
        return
    }
}
